# svr4

./: .clang-format  .gitignore  AGENTS.md  GNUmakefile  Jinxfile  LICENCE.md  README.md  build.py  jinx  mkdocs.yml  pyproject.toml  requirements.txt
docs/: boot-floppy-tooling.md  bringup-debug-notes-2026-05-06.md  index.md  kernel-device-catalog.md  kernel-drivers.md  kernel-modernization-plan.md  map-noreserve-plan.md  map-noreserve-signals.md  syscall-families.md  syscall-porting-guide.md  syscalls.md
extras/xf86-input-svr4xqueue/: meson.build
extras/xf86-input-svr4xqueue/conf/: 40-svr4xqueue.conf
extras/xf86-input-svr4xqueue/src/: svr4xqueue.c
extras/xf86-video-svr4ws/: meson.build
extras/xf86-video-svr4ws/conf/: 10-svr4ws.conf
extras/xf86-video-svr4ws/src/: svr4ws_driver.c
host-recipes/: binutils  cmake  gcc  pkg-config  xorg-font-util  xorg-macros  xtrans
host-tools/: README.md  bfs_mount.py  disk_image.py  ufs_mount.py
recipes/: base-files  bash  core-libs  coreutils  freetype2  icu  libX11  libXau  libXaw  libXdmcp  libXext  libXfixes  libXfont2  libXft  libXi  libXmu  libXpm  libXrandr  libXrender  libXshmfence  libXt  libXxf86vm  libatomic  libbsd  libexpat  libfontenc  libgcc  libgcc-static  libice  libiconv  libpng  libsm  libsmarter  libstdc++  libxcb  libxcvt  libxkbfile  libxml2  libxshmfence  libxtrans  (+38 more)
source-recipes/: binutils  cmake  gcc  gettext  libtool  mlibc  pkg-config  uts  xorg-font-util  xorg-util-macros  xtrans
support/: CMakeToolchain.txt  config.guess  config.sub  meson.cross-file
tasks/: make_image.py
tools/: boot_floppy_image.py  floppyfs.py  legacy_as.py  uts_build_boot.py  uts_build_fp.py  uts_driver_compose.py  uts_idbuild.py  uts_idconfig.py  (+3 more)
(+174 files in other folders)
